--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,9 +18,10 @@
 
 #main-nav {
   display: flex;
+  background-color: #f5f5f5;
   flex-direction: row;
-  max-width: 100vw;
-  justify-content: space-between;
+  width: 400px;
+  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -37,13 +38,13 @@
 
 #hamburger,
 #close-btn {
+  z-index: 11;
   display: none;
   font-size: 26px;
   background: none;
   border: none;
   cursor: pointer;
   color: #025595;
-  z-index: 11;
 }
 
 /* SIDE NAV */
@@ -76,11 +77,7 @@
   flex-direction: column;
   align-items: flex-start;
 }
-#nav-list {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
+
 #mobile-nav {
   display: flex;
   flex-direction: column;
@@ -88,7 +85,7 @@
 }
 
 /* RESPONSIVENESS */
-@media (max-width: 360px) {
+@media (max-width: 412px) {
   #header {
     padding: 39px 20px;
     align-items: center;
@@ -105,6 +102,9 @@
 
   #side-nav {
     display: flex;
+    flex-direction: column;
+  }
+  #nav-list {
     flex-direction: column;
   }
 }
