--- a/src/pages/Errors/NotFoundPage/NotFoundPage.css
+++ b/src/pages/Errors/NotFoundPage/NotFoundPage.css
@@ -18,7 +18,7 @@
   justify-content: space-between;
   border-radius: 12px;
   border: 1px solid cornflowerblue;
-  background-color: rgb(243, 249, 255);
+  background-color: ​#f3f9ff;
 }
 #error-404-page h1 {
   display: block;
