--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,12 +16,15 @@
   align-items: center;
 }
 
+/* -------------- */
+/* ---MAIN NAV--- */
+/* ---DEFAULT---- */
+/* -------------- */
+
 #main-nav {
   display: flex;
-  background-color: #f5f5f5;
   flex-direction: row;
-  width: 400px;
-  /* justify-content: space-between; */
+  width: fit-content;
   align-items: center;
 }
 
