--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,10 +4,12 @@
   flex-direction: row;
   position: fixed;
   width: 100vw;
-  height: fit-content;
+  height: auto;
   padding: 17px 70px;
   align-items: center;
   justify-content: space-between;
+  filter: drop-shadow(0px 0px 6px #02559560);
+  background-color: #eff8ff;
 }
 
 #logo {
@@ -50,8 +52,12 @@
   color: #025595;
 }
 
-/* SIDE NAV */
+/* -------------- */
+/* ---SIDE NAV--- */
+/* -------------- */
+
 #side-nav {
+  z-index: 10;
   display: none;
   position: fixed;
   top: 0;
@@ -60,11 +66,11 @@
   height: 100vh;
   background-color: #ffffff;
   transition: right 0.3s ease-in-out;
-  z-index: 10;
   flex-direction: column;
 }
 
 #side-nav.open {
+  height: 1000px;
   right: 0;
 }
 
@@ -90,6 +96,7 @@
 /* RESPONSIVENESS */
 @media (max-width: 412px) {
   #header {
+    height: 100px;
     padding: 39px 20px;
     align-items: center;
   }
