--- a/src/pages/Errors/UnderMaintenancePage/UnderMaintenancePage.css
+++ b/src/pages/Errors/UnderMaintenancePage/UnderMaintenancePage.css
@@ -4,6 +4,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   background-color: rgb(255, 249, 242);
 }
 #maintenance-msg-page-background-wrapper {
@@ -11,7 +12,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 80vw;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   transform: translate(-50%, -50%);
@@ -23,7 +24,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
+  width: 100vw;
   height: auto;
   opacity: 0.05;
 }
